<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebosensorplugins</name>
  <version>0.0.0</version>
  <description>The gazebosensorplugins package. Includes some plugins for Gazebo 9</description>
  <maintainer email="ros2-heavy-compute@todo.todo">ros2-heavy-compute</maintainer>
  <license>MIT</license>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2</build_depend>

  <depend>gtec_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}" />
  </export>
</package>
